adding files that have been worked on and not saved previously

--- a/investigating-harp.ipynb
+++ b/investigating-harp.ipynb
@@ -497,7 +497,9 @@
     "c18o_integ.tick_labels.set_yformat('ddd.dd')\n",
     "\n",
     "c18o_integ.savefig('/Users/hparsons/Documents/EAO/Research/JellyFish/images/Jellyfish-c18o-integ-contours.pdf')\n",
-    "c18o_integ.savefig('/Users/hparsons/Documents/EAO/Research/JellyFish/images/Jellyfish-c18o-integ-contours.png')\n"
+    "c18o_integ.savefig('/Users/hparsons/Documents/EAO/Research/JellyFish/images/Jellyfish-c18o-integ-contours.png')\n",
+    "\n",
+    "\n"
    ]
   },
   {
